# czkawka-dupes-to-symlinks

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Release.toml  SECURITY.md  SUPPORT.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: data-loss-report.yml
.github/workflows/: ci.yml  release.yml
scripts/git-hooks/: pre-commit
src/: args.rs  lib.rs  main.rs  symlinks.rs
tests/: safety.rs  validation.rs
